--- a/TechSupportSystem/static/styles/landing.css
+++ b/TechSupportSystem/static/styles/landing.css
@@ -40,7 +40,7 @@
 
 
 .heading-landing-page h1 {
-    padding-top: 1.5em;
+    padding-top: 1.4em;
     padding-bottom: 0.5em;
     color: white;
     font-size: 3.5em;
